fix(kit): `InputDateRange` fix dark mode issues and list item size (#9098)

--- a/projects/core/styles/mixins/date-picker.less
+++ b/projects/core/styles/mixins/date-picker.less
@@ -58,7 +58,7 @@
         }
 
         &[data-range]::before {
-            background: var(--tui-background-base-alt);
+            background: var(--tui-background-neutral-1);
         }
 
         :host._picking &[data-range]::before {
@@ -66,7 +66,7 @@
         }
 
         &[data-range='middle'] {
-            border-color: var(--tui-background-base-alt);
+            border-color: var(--tui-background-neutral-1);
 
             :host._picking & {
                 border-color: var(--tui-background-neutral-1-hover);
@@ -84,7 +84,7 @@
         }
 
         &[data-range='start'] {
-            border-inline-end-color: var(--tui-background-base-alt);
+            border-inline-end-color: var(--tui-background-neutral-1);
             color: var(--tui-text-primary-on-accent-1);
 
             :host._picking & {
@@ -101,7 +101,7 @@
         }
 
         &[data-range='end'] {
-            border-inline-start-color: var(--tui-background-base-alt);
+            border-inline-start-color: var(--tui-background-neutral-1);
             color: var(--tui-text-primary-on-accent-1);
 
             :host._picking & {
